<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.weddingbells_androidclient.RegistrationActivity"
    tools:showIn="@layout/activity_registration">

    <!-- register progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/firstname"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/lastname"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_weight="1" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            android:ems="10"
            android:id="@+id/editText5"
            android:layout_centerVertical="true"
            android:layout_below="@+id/editText3"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:layout_above="@+id/signupbutton"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="25dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_gender"
                android:id="@+id/radioButton1" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_gender"
                android:id="@+id/radioButton2" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:id="@+id/signupbutton" />
    </LinearLayout>
</RelativeLayout>
